<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_portfolio"
            android:icon="@drawable/ic_portfolio"
            android:title="@string/portfolio" />
        <item
            android:id="@+id/nav_opportunities"
            android:icon="@drawable/ic_opportunity"
            android:title="@string/opportunities" />
        <item
            android:id="@+id/nav_messages"
            android:icon="@drawable/ic_message"
            android:title="@string/messages" />
        <item
            android:id="@+id/nav_people"
            android:icon="@drawable/ic_message"
            android:title="@string/my_people" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/preferences" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout" />
    </group>
</menu>
